tests/Rules/Anchor/Fixtures/valid/link_with_aria_labelledby.html.twig
<html>
  <body>
    <span id="nav-label">Navigation</span>
    <a href="/foo" aria-labelledby="nav-label"></a>
  </body>
</html>
