tests/Rules/Anchor/Fixtures/invalid/link_with_aria_labelledby_missing_id.html.twig
{# 1 errors #}
<html>
  <body>
    <a href="/foo" aria-labelledby="nonexistent-id"></a>
  </body>
</html>
